2014-01-17  Anders Carlsson  <andersca@apple.com>

        Remove FrameLoaderClient::didPerformFirstNavigation()
        https://bugs.webkit.org/show_bug.cgi?id=127191

        Reviewed by Dan Bernstein.

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
        * WebProcess/WebCoreSupport/WebFrameLoaderClient.h:

2014-01-17  Manuel Rego Casasnovas  <rego@igalia.com>

        [GTK] Add CSS Grid Layout as experimental feature
        https://bugs.webkit.org/show_bug.cgi?id=127089

        Reviewed by Martin Robinson.

        Allow CSS Grid Layout to be enabled through the environment variable WEBKITGTK_EXPERIMENTAL_FEATURES.

        Example: WEBKITGTK_EXPERIMENTAL_FEATURES="CSS_GRID_LAYOUT=1"

        * UIProcess/API/gtk/WebKitSettings.cpp:
        (webKitSettingsConstructed): Use new experimental feature to enable or disable CSS Grid Layout.
        * UIProcess/gtk/ExperimentalFeatures.cpp: Add new experimental feature.
        * UIProcess/gtk/ExperimentalFeatures.h: Ditto.

2014-01-17  Enrica Casucci  <enrica@apple.com>

        Support WebSelections in WK2 on iOS.
        https://bugs.webkit.org/show_bug.cgi?id=127015
        <rdar://problem/15843090>

        Reviewed by Dan Bernstein.

        Removing unused variable in selectWithGesture that
        causes Release build to fail after r162103.

        * WebProcess/WebPage/ios/WebPageIOS.mm:
        (WebKit::WebPage::selectWithGesture):

2014-01-17  Yongjun Zhang  <yongjun_zhang@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=127138
        Add more delegate callback methods to WKWebProcessPlugInLoadDelegate.

        Reviewed by Sam Weinig.

        Add more WKWebProcessPlugInLoadDelegate callback methods so that a injected
        bundle can listen/react to more frame loading events.

        * WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInLoadDelegate.h: Add more delegate callback methods for
            WKWebProcessPlugInLoadDelegate.